--- a/EC/CSS/style.css
+++ b/EC/CSS/style.css
@@ -26,73 +26,89 @@ table {
 	border-collapse: collapse;	border-spacing: 0;
 }
 /* ====================================================== */
-@media (max-width:768px)
-{
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+@media (max-width:768px){
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+  }
+  nav {
+    width: 100%;
+    background-color: #303234;
+  }
+  ul {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+  }
+  li {
+    display: inline-block;
+    padding: 10px 0px;
+  }
+  ul li:hover {
+    background: #e91e63;
+  }
+  ul li a {
+    color: #fff;
+    font-size: 20px;
+    line-height: -10px;
+    vertical-align: bottom;
+    text-decoration: none;
+  }
+  ul li a span {
+    font-size: 15px;
+    line-height: 15px;
+    vertical-align: baseline;
+    padding-bottom: 10px;
+
+  }
+  .toggle {
+    width: 100%;
+    padding: 10px 0px;
+    /* text-align: right; */
+    text-align: left;
+    box-sizing: border-box;
+    color: #fff;
+    font-size: 30px;
+    display: block;
+    /* display: none;・・・PC */
+  }
+  .toggle i {
+    padding: 5px 10px;
+    border: 1px solid rgba(0,0,0,0);
+    border-radius: 10px 10px;
+  }
+  .toggle i:hover {
+    background-color: rgb(116, 167, 221)
+  }
+  ul {
+    width: 100%;
+    display: none;
+  }
+  ul li{
+    display: block;
+    text-align: center;
+  }
+  .active {
+    display: block;
+  }
 }
-nav {
-  width: 100%;
-  background-color: #303234;
+/* ========== メインCSS =========== */
+#main {
+  width: 300px;
 }
-ul {
-  width: 80%;
-  margin: 0 auto;
-  padding: 0;
+#main .section-all {
+  width: 300px;
+}
+#main .item-pic {
+  width: 260px;
   text-align: center;
 }
-li {
-  display: inline-block;
-  padding: 10px 0px;
+img {
+  width: auto;
+  height: auto;
 }
-ul li:hover {
-  background: #e91e63;
-}
-ul li a {
-  color: #fff;
-  font-size: 20px;
-  line-height: -10px;
-  vertical-align: bottom;
-  text-decoration: none;
-}
-ul li a span {
-  font-size: 15px;
-  line-height: 15px;
-  vertical-align: baseline;
-  padding-bottom: 10px;
-
-}
-.toggle {
-  width: 100%;
-  padding: 10px 0px;
-  /* text-align: right; */
-  text-align: left;
-  box-sizing: border-box;
-  color: #fff;
-  font-size: 30px;
-  display: block;
-  /* display: none;・・・PC */
-}
-.toggle i {
-  padding: 5px 10px;
-  border: 1px solid rgba(0,0,0,0);
-  border-radius: 10px 10px;
-}
-.toggle i:hover {
-  background-color: rgb(116, 167, 221)
-}
-
-ul {
-  width: 100%;
-  display: none;
-}
-ul li{
-  display: block;
+body #main .item-cover p {
   text-align: center;
-}
-.active {
-  display: block;
-}
 }
